<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.kosign.collaboguide.NavigationBar
         android:id="@+id/navigationBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            title="@string/app_name"
            language="en" >    
    </com.kosign.collaboguide.NavigationBar>
    
    <LinearLayout android:id="@+id/ll_Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                
                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/login_logo" />
                
                <LinearLayout 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="55dp"
                	android:layout_marginRight="55dp">
                
                <LinearLayout 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"                
                    android:orientation="vertical">
                <EditText
                    android:id="@+id/et_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_input"
                    android:hint="@string/hint_userid"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textColor="#505050"
                    android:textSize="17sp"
                    android:maxLength="50">                   
                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/et_Pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="textPassword"
                    android:background="@drawable/login_input"
                    android:hint="@string/hint_password"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textColor="#505050"
                    android:textSize="17sp"
                    android:maxLength="50" />
                </LinearLayout>

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal" >
                
                <Button
                    android:id="@+id/btn_Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_next"
                    android:text="@string/btn_login"
                    android:textColor="#ffff"
                    android:textSize="17sp" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checked="true"
                    android:background="@null"
                    android:button="@null"
                    android:drawableLeft="@drawable/btn_check"
                    android:drawablePadding="10dp"
                    android:text="@string/checkbox_login"
                    android:textColor="#6E6E6E"
                    android:textSize="14sp"
                    android:layout_gravity="center"/>
                
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>
